minor fix to shift logo in corner down so it's visible

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -137,7 +137,7 @@ div.stSlider > label {
 /* logo in top right corner */
 .corner-logo {
     position: fixed;
-    top: 30px;
+    top: 70px;
     right: 30px;
     width: 80px;
     z-index: 1000;
